--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://bosagora.github.io/boa-sdk-ts/",
   "dependencies": {
     "argparse": "^2.0.1",
-    "boa-sdk-ts": "^0.0.38",
+    "boa-sdk-ts": "^0.0.43",
+    "boa-sodium-ts": "^0.1.0",
     "extend": "^3.0.2",
     "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
