--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "homepage": "https://bosagora.github.io/boa-sdk-ts/",
   "dependencies": {
     "argparse": "^2.0.1",
-    "boa-sdk-ts": "^0.1.0",
+    "boa-sdk-ts": "^0.1.5",
     "boa-sodium-ts": "^0.1.0",
     "extend": "^3.0.2",
     "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "smart-buffer": "^4.1.0",
     "urijs": "^1.19.2",
     "winston": "^3.3.3"
